fixed spacing issues

--- a/main.css
+++ b/main.css
@@ -2,10 +2,11 @@
     font-family: playfair display;
     scroll-behavior: smooth;
     background-color: #FFFFFF;
-    
+    line-height:  1.618;
 }
 .hello{
     color: #333366;
+    margin: 0;
 }
 #name{
     border: 5px solid #333366;
@@ -26,7 +27,7 @@ body{
 
 .about{
     width: 100vw;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .personalSection{
@@ -71,6 +72,8 @@ body{
 }
 
 .projects{
+    display: flex;
+    flex-direction: column;
     width: 100vw;
     height: 100vh;
 }
@@ -116,7 +119,7 @@ i:hover, #resBtn:hover{
     font-family: 'Open Sans', sans-serif;
     text-transform: uppercase;
     letter-spacing: 8px;
-    padding: 5px;
+    padding: 0 10px 0 10px;
     background-color: #F3EFEA;
 }
 .nav{
@@ -133,7 +136,7 @@ i:hover, #resBtn:hover{
     object-fit: cover;
     z-index: 0;
     margin-top: 70px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .grid-container, .btn-cont {
@@ -215,6 +218,7 @@ i:hover, #resBtn:hover{
     }
     .hello{
         font-size: 1.75em;
+        margin: 0;
     }
 
     .fileShare{
